# rewiredai

./: package-lock.json  package.json
solana/: Anchor.toml  Cargo.toml
solana/programs/rewired/: Cargo.toml
solana/programs/rewired/src/: constants.rs  errors.rs  lib.rs  state.rs
src/: middleware.ts
src/app/: globals.css  layout.tsx
src/app/(app)/: layout.tsx
src/app/(app)/chat/: page.tsx
src/app/(app)/courses/: page.tsx
src/app/(app)/dashboard/: page.tsx
src/app/(app)/onboarding/: page.tsx
src/app/(app)/schedule/: page.tsx
src/app/(app)/settings/: page.tsx
src/app/(auth)/login/: page.tsx
src/app/(landing)/: page.tsx
src/app/api/assignments/: route.ts
src/components/: background-sync.tsx  logo.tsx
src/components/dashboard/: activity-feed.tsx  course-health.tsx  dashboard-shell.tsx  deadline-pipeline.tsx  gpa-chart.tsx  study-analytics.tsx  todays-plan.tsx
src/components/landing/: agent-features.tsx  cta.tsx  features.tsx  footer.tsx  hero.tsx  how-it-works.tsx  navbar.tsx  testimonial.tsx
src/components/layout/: mobile-nav.tsx  sidebar.tsx
src/components/solana/: wallet-button.tsx  wallet-provider.tsx
src/components/ui/: animated-counter.tsx  page-header.tsx  skeleton-card.tsx  stagger-children.tsx
src/lib/: azure-openai.ts  canvas.ts
src/lib/agent/: escalation.ts  reasoning.ts  system-prompt.ts  tools.ts
src/lib/google/: auth.ts  calendar.ts  gmail.ts
src/lib/parsers/: syllabus.ts
src/lib/solana/: connection.ts  constants.ts  dual-write.ts  idl.json  program.ts
src/types/: index.ts
supabase/: schema.sql
(+21 files in other folders)
