[package]
name = "rewired"
version = "0.1.0"
description = "Rewired AI — On-chain student academic records"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rewired"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
